# legacy-sourceforge-svn-mirror

./: Makefile.in  configure  configure.ac
Covers/: Covers.ini  Thumbs.db
Game/: Changelog-GERMAN.txt  Changelog.german.txt  Changelog.txt  ReadMe.txt
Game/Code/: UltraStar.bdsproj  UltraStar.cfg  UltraStar.dpr  UltraStar.rc  UltraStar.res  bamboo-build-win-delphi.bat
Game/Code/Classes/: TextGL.pas  UCatCovers.pas  UCommandLine.pas  UCovers.pas  UDLLManager.pas  UDataBase.pas  UDraw.pas  UFiles.pas  UGraphic.pas  UGraphicClasses.pas  UHelp.pas  UIni.pas  UJoystick.pas  ULCD.pas  ULanguage.pas  ULog.pas  ULyrics.pas  UMain.pas  UMergeSort.pas  UMusic.pas  UParty.pas  UPartyM2.pas  UPlaylist.pas  URecord.pas  USkins.pas  USongs.pas  UTexture.pas  UThemes.pas  UVideo.pas  UWebCam.pas
Game/Code/Menu/: UDisplay.pas  UDrawTexture.pas  UMenu.pas  UMenuButton.pas  UMenuSelect.pas  UMenuSelectSlide.pas  UMenuStatic.pas  UMenuText.pas
Game/Code/SMpeg/: USmpeg.pas
Game/Code/Screens/: UScreenCredits.pas  UScreenEdit.pas  UScreenEditConvert.pas  UScreenEditHeader.pas  UScreenEditSub.pas  UScreenLevel.pas  UScreenLoading.pas  UScreenMain.pas  UScreenName.pas  UScreenOpen.pas  UScreenOptions.pas  UScreenOptionsAdvanced.pas  UScreenOptionsGame.pas  UScreenOptionsGraphics.pas  UScreenOptionsLyrics.pas  (+22 more)
Game/Output/: Changelog.german.txt  Changelog.txt  ReadMe.txt
Installer/: Readme.txt  Skin Files.xls  UltraStar Deluxe CMD Edition.nsi  UltraStar Deluxe.nsi  UltraStarDeluxe.nsi  UltraStarDeluxeFull.nsi
Installer/clanguage/: German.nsh
Installer/gdf/: UltraStar Deluxe.gdf.xml  UltraStar Deluxe.rc
Installer/images/: Thumbs.db
Installer/settings/: files_in.nsh  files_un.nsh  functions.nsh  langstrings.nsh  settings-1031.ini  settings-1033.ini  variables.nsh
Installer/u3portable/: License.txt  Readme.txt  copy.bat
InstallerDependencies/: ReadMe.txt
InstallerDependencies/documents/: Changelog.german.txt  Changelog.txt
Languages/: English.ini
Lua/: configure  configure.ac
Lua/src/: ultrastardx.dpr
Modis/5000Points/: Until5000.identcache
Modis/SDK/: ModiSDK.dcu  ModiSDK.pas
ServiceBasedPlugins/src/: ultrastardx.dpr
Skins/Classic/: Star.ini  Thumbs.db
Skins/Deluxe/: Fall.ini  Summer.ini  Thumbs.db  Winter.ini
Skins/Orange/: Orange.ini  Thumbs.db
Skins/Streetlight/: Streetlight.ini  Thumbs.db
Skins/Vistar/: Thumbs.db  Vistar.ini
Themes/: Classic.ini  Deluxe.ini  Orange.ini  Streetlight lite.ini  Streetlight.ini  Vistar.ini
cmake/: CMakeLists.txt
cmake/artwork/: .PLACEHOLDER
cmake/dists/: bundle-startup.sh
cmake/dists/cmake/Modules/: AnalyzeDylibDeps.cmake  ConfigurePasFile.cmake  ExpandVersion.cmake  FileUtils.cmake  FindPPC.cmake  LazarusGenerator.cmake  MacOSXBundle.cmake  MacroParseArguments.cmake  UsePascal.cmake  cmake_uninstall.cmake.in
cmake/dists/cmake/Modules/Templates/: delphi2005Proj.bdsproj.in  lazarusProj.lpi.in
cmake/dists/gentoo/: ultrastardx-1.1.0_alpha1.ebuild  ultrastardx-1.1.0_beta1.ebuild  ultrastardx-1.1_beta.ebuild  ultrastardx-9999.ebuild
cmake/plugins/: CMakeLists.txt
cmake/plugins/5000Points/: CMakeLists.txt
cmake/plugins/Blind/: CMakeLists.txt
cmake/plugins/Dont_Get_Worse/: CMakeLists.txt
cmake/plugins/Duell/: CMakeLists.txt
cmake/plugins/Team_Duell/: CMakeLists.txt
cmake/src/: CMakeLists.txt  config.inc.in  switches.inc
cmake/src/base/: UConfig.pas
cmake/src/lib/: CMakeLists.txt
cmake/src/lib/FreeImage/: CMakeLists.txt
cmake/src/lib/JEDI-SDL/: CMakeLists.txt
cmake/src/lib/JEDI-SDL/OpenGL/: CMakeLists.txt
cmake/src/lib/JEDI-SDL/SDL/: CMakeLists.txt
cmake/src/lib/JEDI-SDL/SDL_Image/: CMakeLists.txt
cmake/src/lib/SQLite/: CMakeLists.txt
cmake/src/lib/bass/: CMakeLists.txt
cmake/src/lib/collections/: CMakeLists.txt
cmake/src/lib/ctypes/: CMakeLists.txt
cmake/src/lib/ffmpeg/: CMakeLists.txt
cmake/src/lib/fft/: CMakeLists.txt
cmake/src/lib/freetype/: CMakeLists.txt
cmake/src/lib/libpng/: CMakeLists.txt
cmake/src/lib/midi/: CMakeLists.txt
cmake/src/lib/portaudio/: CMakeLists.txt
cmake/src/lib/portmixer/: CMakeLists.txt
cmake/src/lib/projectM/: CMakeLists.txt
cmake/src/lib/projectM/cwrapper/: CMakeLists.txt
cmake/src/lib/samplerate/: CMakeLists.txt
cmake/src/lib/zlib/: CMakeLists.txt
game/: LuaCommands.odt  main.lua
game/languages/: English.ini  German.ini
game/themes/: Deluxe.ini  Verdure.ini
mediaplugin/: Makefile.in  autogen.sh  configure  configure.ac
mediaplugin/src/: config-darwin.inc  config-win.inc  config.inc.in  switches.inc  ultrastardx.dpr
mediaplugin/src/plugins/media/ffmpeg/: Makefile.am  Makefile.in  autogen.sh  configure  configure.ac  ffmpeg_audio_convert.h  ffmpeg_core.cpp  ffmpeg_core.h  ffmpeg_plugin.cpp  ffmpeg_video_decode.cpp  ffmpeg_video_decode.h
src/: config-darwin.inc  config-win.inc  config.inc.in  switches.inc  ultrastardx.dpr
src/base/: TextGL.pas  UCommon.pas  UConfig.pas  UCovers.pas  UFiles.pas  UFilesystem.pas  UGraphic.pas  UGraphicClasses.pas  UIni.pas  ULyrics.pas  UMain.pas  UMusic.pas  UNote.pas  UParty.pas  UPath.pas  UPathUtils.pas  USkins.pas  USong.pas  USongs.pas  UTexture.pas  UThemes.pas  UUnicodeUtils.pas
src/lua/: ULuaGl.pas  ULuaLog.pas  ULuaTextGL.pas
src/media/: UVideo.pas
src/menu/: UDisplay.pas  UDrawTexture.pas  UMenu.pas  UMenuButton.pas  UMenuEqualizer.pas  UMenuInteract.pas  UMenuSelectSlide.pas  UMenuStatic.pas  UMenuText.pas
src/screens/: UScreenAbout.pas  UScreenCredits.pas  UScreenEdit.pas  UScreenJukebox.pas  UScreenLoading.pas  UScreenMain.pas  UScreenName.pas  UScreenOptions.pas  UScreenOptionsAdvanced.pas  UScreenOptionsGame.pas  UScreenOptionsGraphics.pas  UScreenOptionsLyrics.pas  UScreenOptionsRecord.pas  UScreenOptionsSound.pas  UScreenOptionsThemes.pas  UScreenPartyNewRound.pas  UScreenPartyRounds.pas  UScreenPartyScore.pas  UScreenPopup.pas  UScreenScore.pas  UScreenSing.pas  UScreenSong.pas  UScreenSongJumpto.pas  UScreenStatDetail.pas
unicode/: .gitignore  COPYRIGHT.txt  RELEASEBLOCKERS.txt
unicode/src/: ultrastardx.dpr
us_maker_edition/: configure  configure.ac
(+442 files in other folders)
