# $URL$
# $Id$
add_subdirectory(bass)
add_subdirectory(collections)
add_subdirectory(ctypes)
add_subdirectory(ffmpeg)
add_subdirectory(fft)
add_subdirectory(FreeImage)
add_subdirectory(freetype)
add_subdirectory(JEDI-SDL)
add_subdirectory(libpng)
add_subdirectory(midi)
add_subdirectory(portaudio)
add_subdirectory(portmixer)
add_subdirectory(projectM)
add_subdirectory(samplerate)
add_subdirectory(SQLite)
add_subdirectory(zlib)
